--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "express-session": "^1.18.0",
+    "mssql": "^11.0.1",
     "nodemon": "^3.1.7"
   }
 }
