--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.21.0",
     "express-session": "^1.18.0",
     "got": "^11.8.6",
+    "moment-timezone": "^0.5.46",
     "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7"
