--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.21.0",
     "express-session": "^1.18.0",
     "got": "^11.8.6",
+    "kafkajs": "^2.2.4",
     "moment-timezone": "^0.5.46",
     "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.1",
