--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
-    "openai": "^4.72.0"
+    "openai": "^4.72.0",
+    "socket.io": "^4.8.1"
   },
   "keywords": []
 }
